force-app/main/default/objects/Account/fields/Credit_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Review_Date__c</fullName>
    <description>Credit Review Date received from Adaptiv</description>
    <label>Credit Review Date</label>
    <type>Date</type>
</CustomField>