force-app/main/default/objects/Account/fields/Credit_Risk__c.field-meta.xml
<CustomField>
    <fullName>Credit_Risk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SPGRT - 1025 : Field displays the name of the Credit Risk Client Team Member on the Client</description>
    <inlineHelpText>Credit Risk Client Team member on the Client</inlineHelpText>
    <label>Credit Risk</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ClientsCreditRisk</relationshipName>
    <type>Lookup</type>
</CustomField>