force-app/main/default/objects/Account/fields/CRT_Client_Type__c.field-meta.xml
<CustomField>
    <fullName>CRT_Client_Type__c</fullName>
    <formula>&apos;DEL&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRT Client Type - Old</label>
    <type>Text</type>
</CustomField>