force-app/main/default/objects/Account/fields/CRT_Client_Types__c.field-meta.xml
<CustomField>
    <fullName>CRT_Client_Types__c</fullName>
    <description>This field replaces the original formula field to cater for the 5000 chr limit that has been reached. WF was applied to include two additional record types instead of the formulas.
Case# 591: 11/2010 : Rudolf Niehaus</description>
    <label>CRT Client Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>