force-app/main/default/objects/Account/fields/CRT_Hierarchy_Flag__c.field-meta.xml
<CustomField>
    <fullName>CRT_Hierarchy_Flag__c</fullName>
    <description>This field will be set to TRUE for a predetermined time (15 days) after we received the CIF Number for the first time,  for Client onboarded in SFDC only. (EN-0798)</description>
    <formula>(NOT( ISBLANK( CIF_Number_Allocated_date__c )  ) &amp;&amp; ABS(  TODAY() - CIF_Number_Allocated_date__c) &lt; 15 ) &amp;&amp; NOT(ISBLANK(CIF__c)) &amp;&amp; Onboarded_in_SFDC__c = TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRT Hierarchy Flag</label>
    <type>Checkbox</type>
</CustomField>