force-app/main/default/objects/Account/fields/CRT_Mastered__c.field-meta.xml
<CustomField>
    <fullName>CRT_Mastered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CRT Mastered</label>
    <type>Checkbox</type>
</CustomField>