force-app/main/default/objects/Account/fields/CSI_Client_at_Risk__c.field-meta.xml
<CustomField>
    <fullName>CSI_Client_at_Risk__c</fullName>
    <description>CSI - Improve Case automation &amp; data quality control - Update,EN-1210</description>
    <label>CSI - Client at Risk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>