force-app/main/default/objects/Account/fields/Customer_Value_Perception__c.field-meta.xml
<CustomField>
    <fullName>Customer_Value_Perception__c</fullName>
    <description>SFP-9319 [c] Customer&apos;s Value perception in terms of making banking decisions.</description>
    <inlineHelpText>Entire value we bring to the client? What will make this client consistently choose SB over other banks? What will make this client refer SB to other business associates? What will make this client open up their business value chain (ecosystem) to SB?</inlineHelpText>
    <label>Customer Value Perception</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>