force-app/main/default/objects/Account/fields/Debt_Review__c.field-meta.xml
<CustomField>
    <fullName>Debt_Review__c</fullName>
    <label>Debt Review</label>
    <length>255</length>
    <type>Text</type>
</CustomField>