force-app/main/default/objects/Account/fields/Distribution_Channels__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channels__c</fullName>
    <description>SFP-9319 [c] This field is introduced for CVCA feature to allow printable view of the Client Page similar to the CVCA Template.</description>
    <inlineHelpText>This is a description of the key distribution channels through which the client’s products or services are provided to their customers (i.e. physical premises at certain locations, e-commerce website, etc.).</inlineHelpText>
    <label>Distribution Channels</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>