force-app/main/default/objects/Account/fields/DTB_Ratio__c.field-meta.xml
<CustomField>
    <fullName>DTB_Ratio__c</fullName>
    <description>SFP-9319 [c] The DTB ratio is a measure of the diversity of a customer’s product holding within the bank</description>
    <label>DTB Ratio</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>