force-app/main/default/objects/Account/fields/Economic_Group_Parent__c.field-meta.xml
<CustomField>
    <fullName>Economic_Group_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Group parent client for the economic group client hierarchy as represented in credit risk (Adaptiv)</description>
    <inlineHelpText>Group parent client for the economic group client hierarchy as represented in credit risk (Adaptiv)</inlineHelpText>
    <label>Economic Group Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Economic Group Parent Client Name)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>