force-app/main/default/objects/Account/fields/Economic_Group_Parent_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Economic_Group_Parent_Client_Name__c</fullName>
    <description>Group parent client for the economic group client hierarchy as represented in credit risk (Adaptiv)</description>
    <formula>IF(ISBLANK(Economic_Group_Parent__c) &amp;&amp; Adaptive_Flag__c = TRUE , Name, IF(Not( Economic_Group_Parent__c = &quot;&quot;), Economic_Group_Parent__r.Name,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Group parent client for the economic group client hierarchy as represented in credit risk (Adaptiv)</inlineHelpText>
    <label>Economic Group Parent Client Name</label>
    <type>Text</type>
</CustomField>