force-app/main/default/objects/Account/fields/Economic_Group_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Economic_Group_Parent_Id__c</fullName>
    <formula>IF(ISBLANK(Economic_Group_Parent__c),Id,Economic_Group_Parent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Economic Group Parent Id</label>
    <type>Text</type>
</CustomField>