force-app/main/default/objects/Account/fields/Energy_Desk_Country_Priority_Rating__c.field-meta.xml
<CustomField>
    <fullName>Energy_Desk_Country_Priority_Rating__c</fullName>
    <description>This box shows the level of importance given to a country for 1 top - 5 low vis a vis Energy business. Every country must be given a rating.

Regression: C Reiencke : 15/06/2011 : Field was unerased after being deleted for the regression project. Further investigation required</description>
    <label>Energy Desk Country Priority Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>