force-app/main/default/objects/Account/fields/Entity_Actively_Trade__c.field-meta.xml
<CustomField>
    <fullName>Entity_Actively_Trade__c</fullName>
    <inlineHelpText>FATCA Requirement - Entities are regarded as not Actively Trading if they earn more than 50% of their gross income through passive income (e.g. dividends, royalties, rents etc.) and hold more than 50% of their assets in order to generate such incomes</inlineHelpText>
    <label>Does Entity Actively Trade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>