force-app/main/default/objects/Account/fields/Entity_Coverage_Sector__c.field-meta.xml
<CustomField>
    <fullName>Entity_Coverage_Sector__c</fullName>
    <description>CIF Customer CIB IntI Sector - Feed from CRT Customer Detail feed
Removed from CRT feed, Nov &apos;10. Hidden and to be deleted in future.</description>
    <label>Entity Coverage Sector</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Group_Parent_Coverage_Sector__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AFRICAN GOVERNMENT</fullName>
            </value>
            <value>
                <fullName>AGRICULTURE</fullName>
            </value>
            <value>
                <fullName>AUTO</fullName>
            </value>
            <value>
                <fullName>CT CORPORATES</fullName>
            </value>
            <value>
                <fullName>DBN CORPORATES</fullName>
            </value>
            <value>
                <fullName>DEVELOPMENT FINANCIAL INSTITUTION (DFI)</fullName>
            </value>
            <value>
                <fullName>DIVERSIFIED INDUSTRIES</fullName>
            </value>
            <value>
                <fullName>DIVERSIFIED INDUSTRIES - SA</fullName>
            </value>
            <value>
                <fullName>EB&amp;SI</fullName>
            </value>
            <value>
                <fullName>FAMILY CONGLOMERATES</fullName>
            </value>
            <value>
                <fullName>FI - G10</fullName>
            </value>
            <value>
                <fullName>FI - INTERNATIONAL</fullName>
            </value>
            <value>
                <fullName>FI - LATAM</fullName>
            </value>
            <value>
                <fullName>FI - OTHER</fullName>
            </value>
            <value>
                <fullName>FI - SA</fullName>
            </value>
            <value>
                <fullName>FOREIGN GOVERNMENT/EMBASSY</fullName>
            </value>
            <value>
                <fullName>GIO</fullName>
            </value>
            <value>
                <fullName>GLOBAL FUND</fullName>
            </value>
            <value>
                <fullName>IDG - CENTRAL BANKS / AFRICAN GOVERNMENT</fullName>
            </value>
            <value>
                <fullName>IDG - DEVELOPMENT FINANCIAL INSTITUTION (DFI)</fullName>
            </value>
            <value>
                <fullName>IDG - INTERNATIONAL ORGANISATION (IO)</fullName>
            </value>
            <value>
                <fullName>INTERNATIONAL ORGANISATION (IO)</fullName>
            </value>
            <value>
                <fullName>INVESTOR COVERAGE</fullName>
            </value>
            <value>
                <fullName>JHB CORPORATES</fullName>
            </value>
            <value>
                <fullName>MINING &amp; METALS</fullName>
            </value>
            <value>
                <fullName>MINING &amp; METALS - SA</fullName>
            </value>
            <value>
                <fullName>NBFI</fullName>
            </value>
            <value>
                <fullName>NBFI - SA</fullName>
            </value>
            <value>
                <fullName>NON COVERAGE</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas - SA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>