force-app/main/default/objects/Account/fields/Entity_Last_Year_Client_Value_USD__c.field-meta.xml
<CustomField>
    <fullName>Entity_Last_Year_Client_Value_USD__c</fullName>
    <description>Case#5314 C Reinecke - New GM Methodology necessitate field name changes</description>
    <inlineHelpText>Aggregated Last Year Client Value related directly to this Account</inlineHelpText>
    <label>Entity Last Year Client Value (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>