force-app/main/default/objects/Account/fields/ERABatchUpdateRequired__c.field-meta.xml
<CustomField>
    <fullName>ERABatchUpdateRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Helps identify if ERA associated with Event Reports of the client need to be updated w.r.t to EN 661</description>
    <label>ERABatchUpdateRequired</label>
    <type>Checkbox</type>
</CustomField>