force-app/main/default/objects/Account/fields/Event_URL__c.field-meta.xml
<CustomField>
    <fullName>Event_URL__c</fullName>
    <description>When a new event is created for the client, storing the event ID in to this field.This filed is using to trigger a Account work flow whenever task ID is changed .</description>
    <label>Event URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>