force-app/main/default/objects/Account/fields/Executive_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SPGRT - 1025 : Field displays the name of the Executive Sponsor Client Team Member on the Client</description>
    <inlineHelpText>Executive Sponspor on the Client</inlineHelpText>
    <label>Executive Sponsor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ClientsExecutiveSponsor</relationshipName>
    <type>Lookup</type>
</CustomField>