force-app/main/default/objects/Account/fields/Expected_Income__c.field-meta.xml
<CustomField>
    <fullName>Expected_Income__c</fullName>
    <description>Refers to funds or money received from the Client that is not attributable to the regular income that the Client generates.</description>
    <inlineHelpText>Refers to funds or money received from the Client that is not attributable to the regular income that the Client generates.</inlineHelpText>
    <label>Expected Income</label>
    <type>TextArea</type>
</CustomField>