force-app/main/default/objects/Account/fields/External_Meetings_Completed__c.field-meta.xml
<CustomField>
    <fullName>External_Meetings_Completed__c</fullName>
    <description>EN-0695-Amount of Past External Client Meetings (This Year)</description>
    <inlineHelpText>The number of External Client Meetings that were scheduled in the past (Before Today)</inlineHelpText>
    <label>External Meetings Completed</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>