force-app/main/default/objects/Account/fields/External_Meetings_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>External_Meetings_Scheduled__c</fullName>
    <description>EN-0695-Amount of Future External Client Meetings (This Year)</description>
    <inlineHelpText>The number of  External Client Meetings scheduled for later this year (After Today)</inlineHelpText>
    <label>External Meetings Scheduled</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>