force-app/main/default/objects/Account/fields/ExternalCIF_ID__c.field-meta.xml
<CustomField>
    <fullName>ExternalCIF_ID__c</fullName>
    <description>SFP-9071 - Determines External CIF ID</description>
    <externalId>true</externalId>
    <label>ExternalCIF ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>