force-app/main/default/objects/Account/fields/ExternalCIFCountry__c.field-meta.xml
<CustomField>
    <fullName>ExternalCIFCountry__c</fullName>
    <description>SFP-9071 - Field determines the CIF Country</description>
    <label>ExternalCIFCountry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ExternalCIFCountry</valueSetName>
    </valueSet>
</CustomField>