force-app/main/default/objects/Account/fields/ExternalCIFUUID__c.field-meta.xml
<CustomField>
    <fullName>ExternalCIFUUID__c</fullName>
    <description>SFP-9071 - Field determines the External CIF UUID of the record</description>
    <externalId>true</externalId>
    <label>ExternalCIFUUID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>