force-app/main/default/objects/Account/fields/ExternalIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdentifier__c</fullName>
    <description>SFP-9071 - This Field is used as external identifier while upserting records from external source to check against duplicate records</description>
    <externalId>true</externalId>
    <label>ExternalIdentifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>