force-app/main/default/objects/Account/fields/ExternalSystemId__c.field-meta.xml
<CustomField>
    <fullName>ExternalSystemId__c</fullName>
    <description>SFP-9071 - Field determines the External System ID of the record</description>
    <externalId>true</externalId>
    <label>ExternalSystemId</label>
    <length>2</length>
    <type>Text</type>
</CustomField>