force-app/main/default/objects/Account/fields/FAIS_Compliant__c.field-meta.xml
<CustomField>
    <fullName>FAIS_Compliant__c</fullName>
    <formula>IF( OR( ISBLANK( FAIS_Review_Date__c ), FAIS_Review_Date__c + 365 &lt;= TODAY() ), False, True )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FAIS Compliant</label>
    <type>Checkbox</type>
</CustomField>