force-app/main/default/objects/Account/fields/FAIS_reminder__c.field-meta.xml
<CustomField>
    <fullName>FAIS_reminder__c</fullName>
    <description>US-2217 Field populated by Batch according to story criteria</description>
    <label>FAIS reminder</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NO_NEED</fullName>
                <default>true</default>
                <label>NO_NEED</label>
            </value>
            <value>
                <fullName>NEED_REMINDER</fullName>
            </value>
            <value>
                <fullName>HAS_REMINDER_NEED</fullName>
            </value>
            <value>
                <fullName>HAS_REMINDER_NO_NEED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>