force-app/main/default/objects/Account/fields/FAIS_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>FAIS_Review_Date__c</fullName>
    <description>US-1980: FAIS - To store FAIS related information in SF : FAIS Status, NAV, AUM and FAIS Review Date</description>
    <inlineHelpText>This is the date on which FAIS status is reviewed</inlineHelpText>
    <label>FAIS Review Date</label>
    <type>Date</type>
</CustomField>