force-app/main/default/objects/Account/fields/FAIS_Status__c.field-meta.xml
<CustomField>
    <fullName>FAIS_Status__c</fullName>
    <description>US-1980: FAIS - To store FAIS related information in SF : FAIS Status, NAV, AUM and FAIS Review Date</description>
    <inlineHelpText>This field indicates whether a particular client is FIAS impacted.</inlineHelpText>
    <label>FAIS Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FAIS Impacted</fullName>
            </value>
            <value>
                <fullName>Merchant Bank Exempted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>