force-app/main/default/objects/Account/fields/FAIS_Status_Comments__c.field-meta.xml
<CustomField>
    <fullName>FAIS_Status_Comments__c</fullName>
    <description>US-3878: Commentary field required for regulatory reporting</description>
    <inlineHelpText>Additional details regarding the FAIS status of the client</inlineHelpText>
    <label>FAIS Status Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>