force-app/main/default/objects/Account/fields/Financial_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Financial_Service_Provider__c</fullName>
    <description>Financial Services Provider Case 1051: Gift / Expense Logs : C Reinecke</description>
    <inlineHelpText>Is this client a Financial Services Provider?</inlineHelpText>
    <label>Financial Service Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>