force-app/main/default/objects/Account/fields/FIOS_TP_Industry_Sector__c.field-meta.xml
<CustomField>
    <fullName>FIOS_TP_Industry_Sector__c</fullName>
    <label>CRT TP Industry Sector</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asset Managers</fullName>
            </value>
            <value>
                <fullName>Corporates</fullName>
            </value>
            <value>
                <fullName>Financial Institutions</fullName>
            </value>
            <value>
                <fullName>Insurance and Pension Funds</fullName>
            </value>
            <value>
                <fullName>Official Institutions</fullName>
            </value>
            <value>
                <fullName>Private Clients</fullName>
            </value>
            <value>
                <fullName>Unknown Sector</fullName>
                <default>true</default>
                <label>Unknown Sector</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>