force-app/main/default/objects/Account/fields/Focus_Group__c.field-meta.xml
<CustomField>
    <fullName>Focus_Group__c</fullName>
    <description>SFP-9319 [c] Enterprise Client focus group segmentation</description>
    <inlineHelpText>Grow: Top 20% customer,maintain relationship (engagement every 90 days)
Manage: Next 60%,maintain relationship (engagement every 180 days) Retain:Bottom 20%,a focus to grow this business (engagement every 180 days)</inlineHelpText>
    <label>Focus Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Grow</fullName>
            </value>
            <value>
                <fullName>Manage</fullName>
            </value>
            <value>
                <fullName>Retain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>