force-app/main/default/objects/Account/fields/Generate_Concession_Letter__c.field-meta.xml
<CustomField>
    <fullName>Generate_Concession_Letter__c</fullName>
    <formula>HYPERLINK(&quot;/apex/generate_concession_letter?id=&quot; &amp; Id, &quot;Generate Concession Letter&quot; , &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generate Concession Letter</label>
    <type>Text</type>
</CustomField>