force-app/main/default/objects/Account/fields/generate_introcert__c.field-meta.xml
<CustomField>
    <fullName>generate_introcert__c</fullName>
    <description>Link to generate an Introcert Document (US-1375).</description>
    <formula>HYPERLINK(&quot;/apex/GenerateIntrocert?id=&quot; &amp; Id, &quot;Generate Introcert&quot; , &quot;_self&quot;)</formula>
    <inlineHelpText>Link to generate an Introcert Document.</inlineHelpText>
    <label>Generate Introcert</label>
    <type>Text</type>
</CustomField>