force-app/main/default/objects/Account/fields/GM_Champion__c.field-meta.xml
<CustomField>
    <fullName>GM_Champion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SPGRT - 1025 : Field displays the name of the GM Champion Client Team Member on the Client</description>
    <inlineHelpText>GM Champion on the Client</inlineHelpText>
    <label>GM Champion</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ClientsGMChampion</relationshipName>
    <type>Lookup</type>
</CustomField>