force-app/main/default/objects/Account/fields/GP_IP_PPC_Are_Changed__c.field-meta.xml
<CustomField>
    <fullName>GP_IP_PPC_Are_Changed__c</fullName>
    <description>This field is used only in Process Builder - Update GP, IP and PPC based on Client Relationship Hierarchy and contains value which is populated still when flow runs.</description>
    <label>GP IP PPC Are Changed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>