force-app/main/default/objects/Account/fields/Group_KYC_Contact__c.field-meta.xml
<CustomField>
    <fullName>Group_KYC_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KYC Contact(s) Associated</label>
    <type>Checkbox</type>
</CustomField>