force-app/main/default/objects/Account/fields/Group_KYC_Review_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Group_KYC_Review_In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EN:1043 This field will check if client is in the process of a KYC Review.This will be used to report on Clients in KYC</description>
    <inlineHelpText>This is an indication if any of the clients within the Group (based on client hierarchy) are under KYC review</inlineHelpText>
    <label>Group KYC Review In Progress</label>
    <type>Checkbox</type>
</CustomField>