force-app/main/default/objects/Account/fields/Group_Last_Year_Client_Value_USD__c.field-meta.xml
<CustomField>
    <fullName>Group_Last_Year_Client_Value_USD__c</fullName>
    <description>Case#5314 C Reinecke - New GM Methodology necessitate field name changes</description>
    <inlineHelpText>Aggregated Last Year Client Value for all Accounts related to this Parent Account (inc the Parent Account itself)</inlineHelpText>
    <label>Group Last Year Client Value (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>