force-app/main/default/objects/Account/fields/Group_Parent__c.field-meta.xml
<CustomField>
    <fullName>Group_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Group Parent)</relationshipLabel>
    <relationshipName>GroupParents</relationshipName>
    <type>Lookup</type>
</CustomField>