force-app/main/default/objects/Account/fields/Group_Parent_CIF_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Parent_CIF_Number__c</fullName>
    <description>This Fields sets the Top Parent CIF Number if a hierarchy exists for Reporting</description>
    <formula>If(ISPICKVAL(CRT_Parent_Child__c, &quot;TP&quot;), CIF__c  ,If(Not(Group_Parent__c = &quot;&quot;) , Group_Parent__r.CIF__c ,&quot;&quot;))</formula>
    <inlineHelpText>CIF number of the Group Parent. If the Client does not have a “Parent” it will be the Group Parent.</inlineHelpText>
    <label>Group Parent CIF Number</label>
    <type>Text</type>
</CustomField>