force-app/main/default/objects/Account/fields/Group_Parent_Client_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Group_Parent_Client_Coordinator__c</fullName>
    <description>EN-0770 : Field displays the name of the Client Coordinator from the Client&apos;s Ultimate Group Parent.</description>
    <formula>IF(ISBLANK(Group_Parent__r.Id), Owner.FirstName + &apos; &apos; + Owner.LastName, Group_Parent__r.Owner.FirstName + &apos; &apos; + Group_Parent__r.Owner.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Client Coordinator of the Group Parent</inlineHelpText>
    <label>Group Parent Client Coordinator</label>
    <type>Text</type>
</CustomField>